<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModProducto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvModP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvModP"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/tvNomPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNomP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModP"
        app:layout_constraintVertical_bias="0.075" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="312dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomPM"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvPrecioM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrecioM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/etPrecioM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etPrecioA"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioM"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/btnMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioM"
        app:layout_constraintVertical_bias="0.091" />
</androidx.constraintlayout.widget.ConstraintLayout>